--- a/HuffingtonPostExtent-Report/ExtentReport.html
+++ b/HuffingtonPostExtent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2018-01-11 21:42:30</span>
+					<span class='suite-started-time'>2018-01-12 15:47:08</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 56s+99ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 26s+947ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 56s+99ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 26s+947ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2018-01-11 21:41:34</span> 
+							<span class='panel-lead suite-started-time'>2018-01-12 15:45:41</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2018-01-11 21:42:30</span> 
+							<span class='panel-lead suite-ended-time'>2018-01-12 15:47:08</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													TestHomePage
+													TestMenuBar
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='TestHomePage'><a href='#!'>TestHomePage</a></li>
+											<li class='TestMenuBar'><a href='#!'>TestMenuBar</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='03fa8f6d-1247-47c2-8ad6-8ee56f87fb41'>
+										<li class='collection-item test displayed active pass ' extentid='1ea87a71-5a4d-4334-a77b-4c3dc9b160db'>
 											<div class='test-head'>
-												<span class='test-name'>testMenu </span>
+												<span class='test-name'>testMenuBar </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  testhomepage'></span>
+												<span class='category-assigned hide  testmenubar'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-01-11 21:41:53</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-01-11 21:42:27</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 34s+521ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-01-12 15:46:04</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-01-12 15:47:05</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 1s+77ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>TestHomePage</span>
+																<span class='category text-white'>TestMenuBar</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -303,7 +303,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>21:42:27</td>
+																	<td class='timestamp'>15:47:05</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -362,7 +362,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>TestHomePage</span>
+													<span class='category-name'>TestMenuBar</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 1</span>
@@ -386,8 +386,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2018-01-11 21:41:53</td>
-																		<td><span class='category-link linked' extentid='03fa8f6d-1247-47c2-8ad6-8ee56f87fb41'>testMenu</span></td>
+																		<td>2018-01-12 15:46:04</td>
+																		<td><span class='category-link linked' extentid='1ea87a71-5a4d-4334-a77b-4c3dc9b160db'>testMenuBar</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
