--- a/YoutubeExtent-Report/ExtentReport.html
+++ b/YoutubeExtent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2018-01-26 22:51:01</span>
+					<span class='suite-started-time'>2018-01-27 10:05:06</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 4m 31s+404ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 57s+345ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 4m 31s+404ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 57s+345ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2018-01-26 22:46:30</span> 
+							<span class='panel-lead suite-started-time'>2018-01-27 10:04:08</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2018-01-26 22:51:01</span> 
+							<span class='panel-lead suite-ended-time'>2018-01-27 10:05:06</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													TestSearchByElement
+													TestGoogleSheetsPage
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='TestSearchByElement'><a href='#!'>TestSearchByElement</a></li>
+											<li class='TestGoogleSheetsPage'><a href='#!'>TestGoogleSheetsPage</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='95881e4a-fa9f-4ab4-ae82-c03d0c53450c'>
+										<li class='collection-item test displayed active pass ' extentid='dad42bfb-ef2a-473a-bfdc-b1470413b885'>
 											<div class='test-head'>
-												<span class='test-name'>testingsearch </span>
+												<span class='test-name'>testingSearch </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  testsearchbyelement'></span>
+												<span class='category-assigned hide  testgooglesheetspage'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-01-26 22:46:42</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-01-26 22:50:58</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 4m 16s+334ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-01-27 10:04:26</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-01-27 10:05:02</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 35s+705ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>TestSearchByElement</span>
+																<span class='category text-white'>TestGoogleSheetsPage</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -302,8 +302,13 @@
 														</thead>
 														<tbody>
 																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>10:04:27</td>
+																	<td class='step-details'>TestGoogleSheetsPage: testing Search<br></td>
+																</tr>
+																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>22:50:58</td>
+																	<td class='timestamp'>10:05:02</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -362,7 +367,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>TestSearchByElement</span>
+													<span class='category-name'>TestGoogleSheetsPage</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 1</span>
@@ -386,8 +391,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2018-01-26 22:46:42</td>
-																		<td><span class='category-link linked' extentid='95881e4a-fa9f-4ab4-ae82-c03d0c53450c'>testingsearch</span></td>
+																		<td>2018-01-27 10:04:26</td>
+																		<td><span class='category-link linked' extentid='dad42bfb-ef2a-473a-bfdc-b1470413b885'>testingSearch</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
